gap fixed

--- a/style.css
+++ b/style.css
@@ -321,6 +321,10 @@ h2+p {
     gap: 80px;
 }
 
+.contact-form-container p {
+    margin-bottom: 30px;
+}
+
 .lead-form input,
 .lead-form select {
     width: 100%;
